--- a/TranslationsBuilder/Properties/Settings.settings
+++ b/TranslationsBuilder/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="AzureTranslatorServiceLocation" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="UpgradeSettings" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
